--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ psycopg2-binary
 pydantic-settings
 python-dotenv
 python-jose[cryptography]
+python-multipart
 sqlalchemy
 uvicorn[standard]
 validate-docbr
