--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,51 +8,44 @@ services:
   # ====================================================================================
   api:
     build:
-      context: .             # Usa o diretório atual como contexto de build.
-      dockerfile: Dockerfile # Especifica o nome do Dockerfile.
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8000:8000"        # Mapeia a porta 8000 do contêiner para a 8000 do host.
+      - "8000:8000"
     volumes:
-      # Monta o diretório local './app' para '/service/app' no contêiner.
-      # Permite hot-reloading e desenvolvimento iterativo sem rebuilds constantes da imagem.
       - ./app:/service/app
-
-      # Monta os arquivos/pastas do Alembic locais para dentro do contêiner.
-      # Isso garante que os comandos 'alembic' via 'docker-compose exec' usem
-      # o 'alembic.ini' e os scripts de migração mais recentes do seu host.
       - ./alembic.ini:/service/alembic.ini
       - ./alembic:/service/alembic
 
     env_file:
-      - .env                 # Carrega variáveis de ambiente do arquivo .env na raiz.
+      - .env
     depends_on:
-      - db                   # Garante que o serviço 'db' inicie antes do serviço 'api'.
-    # O 'command' para iniciar a API já está no CMD do Dockerfile.
+      db:
+        condition: service_healthy
 
   # ====================================================================================
   # ===== --- Serviço do Banco de Dados PostgreSQL ---                             =====
   # ====================================================================================
   db:
-    image: postgres:15-alpine # Usa uma imagem oficial leve do PostgreSQL.
+    image: postgres:15-alpine
     volumes:
-      # Monta um volume nomeado para persistir os dados do PostgreSQL
-      # mesmo se o contêiner for parado/removido.
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      # Variáveis de ambiente para configurar o PostgreSQL.
-      # Os valores são interpolados a partir do arquivo .env na raiz do projeto.
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      # Mapeia a porta 5432 do contêiner para a 5432 do host.
-      # Permite conectar ao banco de dados a partir de ferramentas na máquina host (ex: DBeaver, pgAdmin).
       - "5432:5432"
-    restart: unless-stopped    # Reinicia o contêiner a menos que seja explicitamente parado.
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
 # ====================================================================================
 # ===== --- Definição de Volumes Nomeados ---                                    =====
 # ====================================================================================
 volumes:
-  postgres_data: # Define o volume nomeado usado pelo serviço 'db'.
-                 # Se não existir, o Docker o criará automaticamente.
+  postgres_data:
